--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div class="card">
+    <div class="search">
+        <input type="text" placeholder="enter city name" spellcheck="flase">
+        <button><img src="images/search.png"> </button>
+    </div>
+</div>
+        
     
 </body>
+
 </html>
