--- a/index.html
+++ b/index.html
@@ -12,9 +12,34 @@
         <input type="text" placeholder="enter city name" spellcheck="flase">
         <button><img src="images/search.png"> </button>
     </div>
+    <div class="error">
+        <p> invalid city name </p>
+    </div>
+    <div class="weather">
+        <img src="images/rain.png" class="weather-icon">
+        <h1 class="temp">22°c</h1>
+        <h2 class="city">New York</h2> 
+        <div class="details">
+            <div class="col">
+                <img src="images/humidity.png" >
+                <div>
+                    <p class="humidity"> 50% </p>
+                    <p>Humidity</p>
+                </div>
+            </div>
+            <div class="col">
+                <img src="images/wind.png" >
+                <div>
+                    <p class="wind"> 50km/h </p>
+                    <p>wind speed</p>
+                </div>
+            </div>
+        </div>       
+    </div>
 </div>
         
     
 </body>
 
 </html>
+
